# ERINN

./: .gitignore  LICENSE.txt  README.md  environment.yml  environment_dev.yml  pyproject.toml  requirements.txt  requirements_dev.txt
ERI/template-python/config/: for_generate_data.yml  for_plot.yml  for_predict_resistance.yml  for_predict_resistivity.yml  for_preprocess.yml  for_training.yml  geo.trn  geo.urf  model.py
ERI/template_matlab/scripts/: generate_processed_data.py  generate_required_data.m  plot_subsurface.m  training.py
ERI/template_python/config/: config.yml
ERI/template_python/scripts/: Random_Forest.py  check_raw_data.py  generate_dataset.py  plot_subsurface.py  predict_potential_over_current.py  predict_resistivity.py  preprocess_dataset.py  pso_for_ERI.py  training.py
ERI/{project}/config/: config.json  geo.urf
ERI/{project}/scripts/: generate_processed_data.py  generate_required_data.m  plot_subsurface.m  pre_training.py  predict_potential.m  (+2 more)
erinn/: LICENSE.txt  README.md  Readme.md  __init__.py  generator.py  preprocessing.py  tf_dataset.py
erinn/matlab/: predict_V_2.m
erinn/models/: CNN.py  CNN1D_Rx.py  DFN.py  FCN.py  __init__.py
erinn/python/: __init__.py  generator.py  metrics.py  preprocessing.py
erinn/simpeg_extended/: base.py  random_model.py
erinn/utils/: __init__.py  data_utils.py  io_utils.py  os_utils.py  tf_utils.py  time_utils.py  vis_utils.py
prototype-sandbox/: README.md  prototype_fancy_txrx.py  prototype_plot_data.py  prototype_tf_add_noise.py
src/erinn/: __init__.py  generator.py  legacy.py  metrics.py
(+168 files in other folders)
